Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18352

Some targets are missing local copy of sptlrpc config

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

      If several targets are running on the same node, then only the first one getting sptlrpc config from server will have local copy of it.

      Problem is in nature of sptlrpc config which is shared between all targets on particular MGC, so the first target fetch it from server and get local copy, but next one find it in memory with cleared cfg_sb and skip local copy creation as have no access to lsi

      Possible solution is to update cfg_sb with current target sb when it finds existing config_llog_data

            tappro Mikhail Pershin
            tappro Mikhail Pershin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: