LU-18352 mgc: explicitly create sptlrpc local copy

Sptlrpc config has single instance per MGC and is shared
by targets, hence it is processed only once and local
copy of it is created also only during first processing
for the first target doing that. All other targets just
find config in memory.

Therefore a local copy creation for other targets need
to be done explicitly when already processed config
is found.

Patch introduces mgc_get_local_copy() which does
just llog copy from MGS if possible for a target
finding already processed sptlrpc config

Test-Parameters: testlist=sanity-sec env=ONLY=70,SHARED_KEY=true
Signed-off-by: Mikhail Pershin <mpershin@whamcloud.com>
Change-Id: I922f92a950b9a07172f36f42b94da854c7702a80
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/56609
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Sebastien Buisson <sbuisson@ddn.com>
Reviewed-by: Aurelien Degremont <adegremont@nvidia.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>